# njitschedulepro

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.txt  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
api/: Dockerfile  package.json  pyproject.toml
api/app/: __init__.py  ai_parser.py  ics_export.py  main.py  models.py  normalizer.py  rate_limiter.py  rmp.py  solver.py
api/tests/: __init__.py  test_normalizer.py  test_solver.py
courseschedules/: Course_Schedule_202610_ACCT_202510126_31124.csv  Course_Schedule_202610_ACCT_202510126_75010.csv  Course_Schedule_202610_ACCT_202511110_31858.csv  Course_Schedule_202610_ACCT_202511111_32110.csv  Course_Schedule_202610_ACCT_202511112_32010.csv  Course_Schedule_202610_ACCT_202511113_3126.csv  Course_Schedule_202610_ACCT_202511115_32631.csv  Course_Schedule_202610_ACCT_202511116_32037.csv  Course_Schedule_202610_ACCT_202511118_31722.csv  Course_Schedule_202610_ACCT_202511119_32011.csv  Course_Schedule_202610_ACCT_20251111_34637.csv  Course_Schedule_202610_ACCT_202511120_3125.csv  Course_Schedule_202610_ACCT_202511121_32527.csv  Course_Schedule_202610_ACCT_202511122_32824.csv  Course_Schedule_202610_ACCT_202511123_32259.csv  Course_Schedule_202610_ACCT_202511124_32013.csv  Course_Schedule_202610_ACCT_202511125_3239.csv  Course_Schedule_202610_ACCT_202511127_31943.csv  Course_Schedule_202610_ACCT_202511129_34437.csv  Course_Schedule_202610_ACCT_20251112_31450.csv  Course_Schedule_202610_ACCT_202511131_3230.csv  (+14554 more)
(+67 files in other folders)
